--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@ Hello World
 <head>
 <!-- The head part of an html document is for information about this document. The body is for the
 content you want to show.-->
-<title>Geovisualization Portfolio / Caglar Koylu</title>
-<!-- the "title" tag is the thing that is displayed on the tab, and it's what a bookmark to this page will be
-named by default. -->
+<title>Geovisualization Portfolio / Olivia Cunningham</title>
+<style>
+   html {
+     font-family: Georgia, Times, serif;
+     font-size: 22px;
+     line-height: 32px;
+   }
+
+   a {
+     color: orange;
+   }
+
+   a:hover {
+     color: red;
+   }
+
+   p {
+     background-color: #dddddd;
+     padding: 20px;
+     width: 320px;
+     margin: 10px;
+     float: left;
+   }
+ </style>
 </head>
 <body>
+  <div id="wrapper"/>
 <!-- The Body. This is where your content will go! Whatever you want to display. In the following labs
 you will embed your maps here. -->
 <h1>Geovisualization Portfolio</h1>
@@ -19,5 +41,6 @@ you will embed your maps here. -->
 mapping libraries tools such as CartoDB, Leaflet, and D3. </p>
 <p><a href="http://clas.uiowa.edu/geography">Geographical and Sustainability Sciences</a></p>
 <p><img src="https://www.dropbox.com/s/osd61jnqw2t3q02/GEOG_3540.png?raw=1"/></p>
+</div>
 </body>
 </html
