--- a/index.html
+++ b/index.html
@@ -7,29 +7,7 @@ Hello World
 <!-- The head part of an html document is for information about this document. The body is for the
 content you want to show.-->
 <title>Geovisualization Portfolio / Olivia Cunningham</title>
-<style>
-   html {
-     font-family: Georgia, Times, serif;
-     font-size: 22px;
-     line-height: 32px;
-   }
-
-   a {
-     color: orange;
-   }
-
-   a:hover {
-     color: red;
-   }
-
-   p {
-     background-color: #dddddd;
-     padding: 20px;
-     width: 320px;
-     margin: 10px;
-     float: left;
-   }
- </style>
+<link href="style.css" rel="stylesheet">
 </head>
 <body>
   <div id="wrapper"/>
