--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
-Hello World
 <!DOCTYPE html>
 <html>
-<!-- You need to put everything inside of an html tag!-->
-<!-- This is a comment! It doesn't do anything except helping you take notes for describing the code-->
 <head>
-<!-- The head part of an html document is for information about this document. The body is for the
-content you want to show.-->
-<title>Geovisualization Portfolio / Olivia Cunningham</title>
-<link href="style.css" rel="stylesheet">
+  <title>Geovisualization Portfolio / Olivia Cunningham</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <div id="wrapper"/>
-<!-- The Body. This is where your content will go! Whatever you want to display. In the following labs
-you will embed your maps here. -->
-<h1>Geovisualization Portfolio</h1>
-<p>In this web page, you will see a variety of geovisualization projects I have worked on.</p>
-<p>The projects were developed using HTML, CSS, JavaScript, and a number of visualization and
-mapping libraries tools such as CartoDB, Leaflet, and D3. </p>
-<p><a href="http://clas.uiowa.edu/geography">Geographical and Sustainability Sciences</a></p>
-<p><img src="https://www.dropbox.com/s/osd61jnqw2t3q02/GEOG_3540.png?raw=1"/></p>
-</div>
+  <div id="wrapper">
+
+    <h1>Olivia Cunningham's Geovisualization Portfolio</h1>
+
+    <h2>Assignments</h2>
+    <ul>
+      <li><a href="https://observablehq.com/d/f299a9ac8f15ffb8" target="_blank">Choropleth Map</a></li>
+      <li><a href="https://observablehq.com/d/a8048fb26b742909" target="_blank">Point Symbol Map</a></li>
+      <li><a href="https://observablehq.com/d/560e81eb33b2b2ed" target="_blank">Isarithmic Map</a></li>
+      <li><a href="https://observablehq.com/d/a04d98f535e9ed31" target="_blank">Bivariate Map</a></li>
+    </ul>
+
+    <h2>About Me</h2>
+    <p><a href="shortbio.html">Read my short bio</a></p>
+
+    <h2>Resume</h2>
+    <p><a href="resume.pdf" target="_blank">View My Resume (PDF)</a></p>
+
+    <h2>Contact</h2>
+    <p><a href="mailto:olivia-cunningham@uiowa.edu">Email Me</a></p>
+
+  </div>
 </body>
-</html
+</html>
