--- a/flowmap.html
+++ b/flowmap.html
@@ -7,12 +7,12 @@
 <body>
   <div id="wrapper">
     <h1>Flow Mapping Assignment</h1>
-    <img src="flowmap.png" width="600" alt="Flow Map Placeholder">
 
-    <h2>Flow Pattern Interpretation</h2>
-    <p><strong>Note:</strong> Due to a saving error, the original flow map project file and exported image were lost. The placeholder above will be replaced by a final map before the next submission window.</p>
+    <p>This assignment analyzes spatial patterns using flow data. While the map itself will be added later, you can read the full interpretation and analysis below:</p>
 
-    <p><strong>Interpretation (to be expanded):</strong> This map originally visualized [insert flow type here — e.g., migration patterns, student origins]. General flow direction was [e.g., west-to-east], and the most prominent nodes included [City A and City B]. Flow volume was represented using proportional symbols and a choropleth base map provided additional geographic context.</p>
+    <p><a href="mapflow.pdf" target="_blank">📄 View Flow Map Interpretation (PDF)</a></p>
+
+    <p>Note: The map file and project JSON will be added after resubmission. This page currently hosts only the interpretive write-up.</p>
   </div>
 </body>
 </html>
