--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="https://observablehq.com/d/a8048fb26b742909" target="_blank">Point Symbol Map</a></li>
       <li><a href="https://observablehq.com/d/560e81eb33b2b2ed" target="_blank">Isarithmic Map</a></li>
       <li><a href="https://observablehq.com/d/a04d98f535e9ed31" target="_blank">Bivariate Map</a></li>
+      <li><a href="flowmap.html">Flow Map Interpretation</a></li>
     </ul>
 
     <h2>About Me</h2>
