--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <h2>Resume</h2>
     <p><a href="resume.pdf" target="_blank">View My Resume (PDF)</a></p>
 
+    <h2>Web Portfolio Questions</h2>
+    <p><a href="WebPortfolioQuestions.pdf" target="_blank">View My Web Portfolio Q&A (PDF)</a></p>
+
     <h2>Contact</h2>
     <p><a href="mailto:olivia-cunningham@uiowa.edu">Email Me</a></p>
 
