--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="https://observablehq.com/d/a04d98f535e9ed31" target="_blank">Bivariate Map</a></li>
       <li><a href="flowmap.html">Flow Map Interpretation</a></li>
     </ul>
-
+    <li><a href="finalproject.html">Final Project: Drought Vulnerability in California</a></li>
     <h2>About Me</h2>
     <p><a href="shortbio.html">Read my short bio</a></p>
 
