files for final
changes to final project folders

--- a/finalproject.html
+++ b/finalproject.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,15 +12,19 @@
 
     <h2>Map 1: Drought-Prone Regions</h2>
     <p>[Embed or link to your first Observable notebook here]</p>
+    <p><img src="images/map1.png" alt="Map 1 Screenshot" width="600"></p>
 
     <h2>Map 2: Water Infrastructure & Access</h2>
     <p>[Embed or link to your second Observable notebook here]</p>
+    <p><img src="images/map2.png" alt="Map 2 Screenshot" width="600"></p>
 
     <h2>Map 3: Socioeconomic Vulnerability</h2>
     <p>[Embed or link to your third Observable notebook here]</p>
+    <p><img src="images/map3.png" alt="Map 3 Screenshot" width="600"></p>
 
     <h2>Map 4 (Optional): Agricultural or Wildfire Overlay</h2>
     <p>[Embed or link to your fourth Observable notebook or image here]</p>
+    <p><img src="images/map4.png" alt="Map 4 Screenshot" width="600"></p>
 
     <p>Each map includes analysis of the relevant spatial patterns, contributing to a better understanding of drought-related risks and planning strategies in California.</p>
   </div>
