--- a/finalproject.html
+++ b/finalproject.html
@@ -11,12 +11,12 @@
     <p>This project explores drought vulnerability across California by visualizing a series of factors that contribute to risk and resilience. The maps below highlight environmental stress, water infrastructure, social vulnerability, and other geographic indicators.</p>
 
     <h2>Map 1: Average Precipitation (2020–2024)</h2>
-  
+
   <iframe width="800" height="700" frameborder="0"
     src="https://observablehq.com/embed/d/7a565f2728d38d36?cells=viewof+map">
   </iframe>
 
-  <p><img src="images/precip_avg_map.png" alt="Average Precipitation Map 2020–2024" width="600"></p>
+  <p><img src="images/avg_precip_ca.png" alt="Average Precipitation Map 2020–2024" width="600"></p>
 
   <p>This map displays the average annual precipitation across California counties from 2020 to 2024. It clearly shows that coastal and northern regions received significantly more rainfall than interior and southern counties. Some inland areas, especially in the Central Valley and Southern California, experienced notably low precipitation, reinforcing their vulnerability to drought. Meanwhile, parts of Northern California and the Sierra Nevada foothills appear to have higher rainfall, which may help buffer those areas against drought stress. This spatial pattern highlights the uneven distribution of water resources and sets the stage for understanding regional differences in drought vulnerability.</p>
 
