--- a/finalproject.html
+++ b/finalproject.html
@@ -3,44 +3,51 @@
 <html>
 <head>
   <title>Final Project – Drought Vulnerability in California</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-xOolHFLEh07PJGoPkLv1I7LkpCkD1CTSzr6AvHGIf1K6xWWh9BxBJ8nME3Uq0ZMo" crossorigin="anonymous">
+
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <div id="wrapper">
-    <h1>Beyond the Drought: Mapping California’s Water Resilience and Inequality</h1>
-    <p>This project explores how prepared California’s regions are for future droughts, even as current drought conditions have subsided. Using interactive geovisualization tools, the project highlights historic precipitation trends, infrastructure gaps, and socio-economic inequities in access to water resilience. By reframing the narrative from “drought crisis” to “long-term water security,” this project aims to support planners, policymakers, and advocates in building a more equitable and climate-ready California.</p>
 
-    <h2>Map 1: Average Precipitation (2020–2024)</h2>
+  <div class="container mt-5 mb-5">
+    <div class="row">
+      <div class="col">
+        <div id="wrapper">
 
-  <iframe width="800" height="700" frameborder="0"
-    src="https://observablehq.com/embed/d/7a565f2728d38d36?cells=viewof+map">
-  </iframe>
+          <h1>Beyond the Drought: Mapping California’s Water Resilience and Inequality</h1>
+          <p>This project explores how prepared California’s regions are for future droughts, even as current drought conditions have subsided. Using interactive geovisualization tools, the project highlights historic precipitation trends, infrastructure gaps, and socio-economic inequities in access to water resilience. By reframing the narrative from “drought crisis” to “long-term water security,” this project aims to support planners, policymakers, and advocates in building a more equitable and climate-ready California.</p>
 
-  <p><img src="images/avg_precip_ca.png" alt="Average Precipitation Map 2020–2024" width="600"></p>
+          <h2>Map 1: Average Precipitation (2020–2024)</h2>
+          <iframe width="800" height="700" frameborder="0"
+            src="https://observablehq.com/embed/d/7a565f2728d38d36?cells=viewof+map">
+          </iframe>
+          <p><a href="https://observablehq.com/d/7a565f2728d38d36" target="_blank">Open this map in a new tab ↗</a></p>
+          <p><img src="images/avg_precip_ca.png" alt="Average Precipitation Map 2020–2024" width="600"></p>
+          <p>This map displays the average annual precipitation across California counties from 2020 to 2024. It clearly shows that coastal and northern regions received significantly more rainfall than interior and southern counties. Some inland areas, especially in the Central Valley and Southern California, experienced notably low precipitation, reinforcing their vulnerability to drought. Meanwhile, parts of Northern California and the Sierra Nevada foothills appear to have higher rainfall, which may help buffer those areas against drought stress. This spatial pattern highlights the uneven distribution of water resources and sets the stage for understanding regional differences in drought vulnerability.</p>
 
-  <p>This map displays the average annual precipitation across California counties from 2020 to 2024. It clearly shows that coastal and northern regions received significantly more rainfall than interior and southern counties. Some inland areas, especially in the Central Valley and Southern California, experienced notably low precipitation, reinforcing their vulnerability to drought. Meanwhile, parts of Northern California and the Sierra Nevada foothills appear to have higher rainfall, which may help buffer those areas against drought stress. This spatial pattern highlights the uneven distribution of water resources and sets the stage for understanding regional differences in drought vulnerability.</p>
+          <h2>Map 2: Drought Severity and Socioeconomic Inequality</h2>
+          <iframe width="800" height="700" frameborder="0"
+            src="https://observablehq.com/embed/d/52dd4f2cb6512729?cells=viewof+map">
+          </iframe>
+          <p><a href="https://observablehq.com/d/52dd4f2cb6512729" target="_blank">Open this map in a new tab ↗</a></p>
+          <p><img src="images/chart.png" alt="Bivariate Map of Drought and Income in California" width="600"></p>
+          <p>This bivariate map displays the intersection of average drought severity (measured by the Palmer Drought Severity Index) and median household income at the county level for July 2021 — one of the driest months California has experienced in decades. The visualization highlights regions where both environmental and economic stress were at their peak, revealing areas that may struggle most with long-term water insecurity. By comparing physical drought risk with socioeconomic vulnerability, this map helps identify communities that face compounding challenges and are most in need of targeted, equitable water policy interventions.</p>
 
-<h2>Map 2: Drought Severity and Socioeconomic Inequality</h2>
+          <h2>Map 3: Socioeconomic Vulnerability</h2>
+          <p>[Embed or link to your third Observable notebook here]</p>
+          <p><img src="images/map3.png" alt="Map 3 Screenshot" width="600"></p>
 
-<iframe width="800" height="700" frameborder="0"
-  src="https://observablehq.com/embed/d/52dd4f2cb6512729?cells=viewof+map">
-</iframe>
+          <h2>Map 4 (Optional): Agricultural or Wildfire Overlay</h2>
+          <p>[Embed or link to your fourth Observable notebook or image here]</p>
+          <p><img src="images/map4.png" alt="Map 4 Screenshot" width="600"></p>
 
-<p><img src="images/chart.png" alt="Bivariate Map of Drought and Income in California" width="600"></p>
+          <p>Each map includes analysis of the relevant spatial patterns, contributing to a better understanding of drought-related risks and planning strategies in California.</p>
 
-<p>This bivariate map displays the intersection of average drought severity (measured by the Palmer Drought Severity Index) and median household income at the county level for July 2021 — one of the driest months California has experienced in decades. The visualization highlights regions where both environmental and economic stress were at their peak, revealing areas that may struggle most with long-term water insecurity. By comparing physical drought risk with socioeconomic vulnerability, this map helps identify communities that face compounding challenges and are most in need of targeted, equitable water policy interventions.</p>
-
-
-
-    <h2>Map 3: Socioeconomic Vulnerability</h2>
-    <p>[Embed or link to your third Observable notebook here]</p>
-    <p><img src="images/map3.png" alt="Map 3 Screenshot" width="600"></p>
-
-    <h2>Map 4 (Optional): Agricultural or Wildfire Overlay</h2>
-    <p>[Embed or link to your fourth Observable notebook or image here]</p>
-    <p><img src="images/map4.png" alt="Map 4 Screenshot" width="600"></p>
-
-    <p>Each map includes analysis of the relevant spatial patterns, contributing to a better understanding of drought-related risks and planning strategies in California.</p>
+        </div> <!-- end of #wrapper -->
+      </div>
+    </div>
   </div>
+
 </body>
 </html>
