--- a/finalproject.html
+++ b/finalproject.html
@@ -20,16 +20,18 @@
 
           <h2>Map 1: Average Precipitation (2020–2024)</h2>
           <iframe width="800" height="700" frameborder="0"
-            src="https://observablehq.com/embed/d/7a565f2728d38d36?cells=viewof+map">
-          </iframe>
+  src="https://observablehq.com/embed/d/7a565f2728d38d36?cells=choropleth">
+</iframe>
+
           <p><a href="https://observablehq.com/d/7a565f2728d38d36" target="_blank">Open this map in a new tab ↗</a></p>
           <p><img src="images/avg_precip_ca.png" alt="Average Precipitation Map 2020–2024" width="600"></p>
           <p>This map displays the average annual precipitation across California counties from 2020 to 2024. It clearly shows that coastal and northern regions received significantly more rainfall than interior and southern counties. Some inland areas, especially in the Central Valley and Southern California, experienced notably low precipitation, reinforcing their vulnerability to drought. Meanwhile, parts of Northern California and the Sierra Nevada foothills appear to have higher rainfall, which may help buffer those areas against drought stress. This spatial pattern highlights the uneven distribution of water resources and sets the stage for understanding regional differences in drought vulnerability.</p>
 
           <h2>Map 2: Drought Severity and Socioeconomic Inequality</h2>
           <iframe width="800" height="700" frameborder="0"
-            src="https://observablehq.com/embed/d/52dd4f2cb6512729?cells=viewof+map">
-          </iframe>
+  src="https://observablehq.com/embed/d/52dd4f2cb6512729?cells=chart">
+</iframe>
+
           <p><a href="https://observablehq.com/d/52dd4f2cb6512729" target="_blank">Open this map in a new tab ↗</a></p>
           <p><img src="images/chart.png" alt="Bivariate Map of Drought and Income in California" width="600"></p>
           <p>This bivariate map displays the intersection of average drought severity (measured by the Palmer Drought Severity Index) and median household income at the county level for July 2021 — one of the driest months California has experienced in decades. The visualization highlights regions where both environmental and economic stress were at their peak, revealing areas that may struggle most with long-term water insecurity. By comparing physical drought risk with socioeconomic vulnerability, this map helps identify communities that face compounding challenges and are most in need of targeted, equitable water policy interventions.</p>
