--- a/finalproject.html
+++ b/finalproject.html
@@ -20,8 +20,9 @@
 
           <h2>Map 1: Average Precipitation (2020–2024)</h2>
           <iframe width="800" height="700" frameborder="0"
-  src="https://observablehq.com/embed/d/7a565f2728d38d36?cells=choropleth">
+  src="https://observablehq.com/embed/@oliviac25/average-precipitation-map?cells=choropleth">
 </iframe>
+
 
           <p><a href="https://observablehq.com/d/7a565f2728d38d36" target="_blank">Open this map in a new tab ↗</a></p>
           <p><img src="images/avg_precip_ca.png" alt="Average Precipitation Map 2020–2024" width="600"></p>
@@ -29,7 +30,7 @@
 
           <h2>Map 2: Drought Severity and Socioeconomic Inequality</h2>
           <iframe width="800" height="700" frameborder="0"
-  src="https://observablehq.com/embed/d/52dd4f2cb6512729?cells=chart">
+  src="https://observablehq.com/embed/@oliviac25/drought-x-income-bivariate-map?cells=chart">
 </iframe>
 
           <p><a href="https://observablehq.com/d/52dd4f2cb6512729" target="_blank">Open this map in a new tab ↗</a></p>
