--- a/shortbio.html
+++ b/shortbio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About Me</title>
+  <title>Short Bio</title>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
