--- a/finalproject.html
+++ b/finalproject.html
@@ -33,16 +33,21 @@
   src="https://observablehq.com/embed/@geographic-visualization-journal/pdsi-medianincome?cells=chart">
 </iframe>
           <p><a href="https://observablehq.com/d/52dd4f2cb6512729" target="_blank">Open this map in a new tab ↗</a></p>
-          <p><img src="images/chart.png" alt="Bivariate Map of Drought and Income in California" width="600"></p>
+          <p><img src="images/finalbiv.png" alt="Bivariate Map of Drought and Income in California" width="600"></p>
           <p>This bivariate map displays the intersection of average drought severity (measured by the Palmer Drought Severity Index) and median household income at the county level for July 2021 — one of the driest months California has experienced in decades. The visualization highlights regions where both environmental and economic stress were at their peak, revealing areas that may struggle most with long-term water insecurity. By comparing physical drought risk with socioeconomic vulnerability, this map helps identify communities that face compounding challenges and are most in need of targeted, equitable water policy interventions.</p>
 
-          <h2>Map 3: Socioeconomic Vulnerability</h2>
-          <p>[Embed or link to your third Observable notebook here]</p>
-          <p><img src="images/map3.png" alt="Map 3 Screenshot" width="600"></p>
+          <h2>Map 3: Failing Water Systems in California</h2>
 
-          <h2>Map 4 (Optional): Agricultural or Wildfire Overlay</h2>
-          <p>[Embed or link to your fourth Observable notebook or image here]</p>
-          <p><img src="images/map4.png" alt="Map 4 Screenshot" width="600"></p>
+  <iframe width="800" height="700" frameborder="0"
+    src="https://observablehq.com/embed/@geographic-visualization-journal/failingwatersystems?cells=proportionalSymbols">
+  </iframe>
+
+  <p><a href="https://observablehq.com/@geographic-visualization-journal/failingwatersystems" target="_blank">Open this map in a new tab ↗</a></p>
+
+  
+  <p>This map visualizes the distribution of failing water systems across California using proportional symbols. Larger circles represent counties with more failing water systems, many of which are located in rural or lower-income areas. These regions often lack the financial resources and infrastructure to maintain safe, reliable access to drinking water. This map highlights how water system failures compound drought vulnerability and environmental injustice, especially in communities already facing structural disadvantage.</p>
+
+
 
           <p>Each map includes analysis of the relevant spatial patterns, contributing to a better understanding of drought-related risks and planning strategies in California.</p>
 
