--- a/finalproject.html
+++ b/finalproject.html
@@ -39,12 +39,17 @@
           <h2>Map 3: Failing Water Systems in California</h2>
 
   <iframe width="800" height="700" frameborder="0"
+
     src="https://observablehq.com/embed/@geographic-visualization-journal/failingwatersystems?cells=proportionalSymbols">
   </iframe>
 
+
+
   <p><a href="https://observablehq.com/@geographic-visualization-journal/failingwatersystems" target="_blank">Open this map in a new tab ↗</a></p>
 
-  
+  <p><img src="images/proportionalSymbols.png" alt="Map of Failing Water Systems in California" width="600"></p>
+
+
   <p>This map visualizes the distribution of failing water systems across California using proportional symbols. Larger circles represent counties with more failing water systems, many of which are located in rural or lower-income areas. These regions often lack the financial resources and infrastructure to maintain safe, reliable access to drinking water. This map highlights how water system failures compound drought vulnerability and environmental injustice, especially in communities already facing structural disadvantage.</p>
 
 
