--- a/finalproject.html
+++ b/finalproject.html
@@ -54,7 +54,9 @@
 
 
 
-          <p>Each map includes analysis of the relevant spatial patterns, contributing to a better understanding of drought-related risks and planning strategies in California.</p>
+  <h2>Conclusion</h2>
+<p>Taken together, these three maps offer a layered perspective on California’s long-term water resilience. The precipitation map reveals stark regional differences in rainfall, showing that some counties face persistent environmental stress regardless of temporary drought relief. The bivariate analysis adds a socioeconomic lens, highlighting communities that are not only drought-prone but also economically vulnerable—where the capacity to adapt or invest in water security is limited. Finally, the map of failing water systems draws attention to the structural breakdowns in access to safe drinking water, disproportionately affecting marginalized and rural areas. These visualizations underscore that water insecurity in California is not just a climate issue—it is deeply tied to infrastructure, income, and environmental justice. Together, they make the case for more targeted, equitable, and data-informed water policy planning across the state.</p>
+
 
         </div> <!-- end of #wrapper -->
       </div>
