--- a/finalproject.html
+++ b/finalproject.html
@@ -16,7 +16,8 @@
         <div id="wrapper">
 
           <h1>Beyond the Drought: Mapping California’s Water Resilience and Inequality</h1>
-          <p>This project explores how prepared California’s regions are for future droughts, even as current drought conditions have subsided. Using interactive geovisualization tools, the project highlights historic precipitation trends, infrastructure gaps, and socio-economic inequities in access to water resilience. By reframing the narrative from “drought crisis” to “long-term water security,” this project aims to support planners, policymakers, and advocates in building a more equitable and climate-ready California.</p>
+          <p>This project explores how prepared California’s regions are for future droughts, even as current drought conditions have temporarily subsided. While short-term climate conditions may suggest relief, the reality is that many communities remain highly vulnerable due to persistent environmental stress, aging infrastructure, and social inequities. Using interactive geovisualization tools, this project examines historic precipitation patterns, highlights regions with high drought exposure and economic vulnerability, and visualizes the geographic distribution of failing water systems. By combining these perspectives, the project reframes the narrative from a reactive “drought crisis” model to a proactive vision of long-term water security. The goal is to provide insight for planners, policymakers, and advocates who are working to build a more equitable and climate-resilient California—where access to safe, reliable water is a right, not a privilege.</p>
+
 
           <h2>Map 1: Average Precipitation (2020–2024)</h2>
           <iframe width="800" height="700" frameborder="0"
